# QRES_RaaS

./: .coveragerc  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  RAAS_MANIFEST.md  README.md  config.example.toml  deny.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  cross_arch_battle.yml  cross_arch_battle.yml.disabled  lint.yml  lint.yml.disabled  minimal.yml  pypi-publish.yml  release.yml  test.yml  wasm_verification.yml.disabled
FUTURE/: RaaS.md
bindings/python/: MANIFEST.in  README.md  pyproject.toml
bindings/python/qres/: __init__.py  __init__.pyi  api.py  auto_tune.py  llm_predictor.py  multimodal.py  neural.py  persistent.py  py.typed  requirements.txt  swarm_cli.py  tensor.py
config/: high-security.toml  minimal.toml  production.toml
crates/qres_core/: Cargo.toml
crates/qres_core/assets/: brain.qnn  ipeps.qnn  lstm.qnn  meta_brain_v2.json  predictor_v2.onnx  predictor_v2.onnx.data  tensor.qnn
crates/qres_core/benches/: baselines_bench.rs  privacy_overhead_bench.rs
crates/qres_core/examples/: bft_demo.rs
crates/qres_core/src/: aggregation.rs  ans_coder.rs  archive.rs  audit.rs  config.rs  dedup.rs  gpu.rs  lib.rs  meta_brain.rs  mixer.rs  multimodal.rs  packet.rs  predictors.rs  privacy.rs  python_api.rs  reputation.rs  resource_management.rs  secure_agg.rs  semantic.rs  spectral.rs  tensor.rs  transformer.rs  zk_proofs.rs
crates/qres_core/src/adaptive/: feedback_loop.rs  mod.rs  regime_detector.rs  silence_state.rs
crates/qres_core/src/compression/: bitpack.rs  bottleneck.rs  lossy.rs  mod.rs
crates/qres_core/src/consensus/: krum.rs
crates/qres_core/src/cortex/: linear.rs  mod.rs  neuron.rs  storage.rs
crates/qres_core/src/encoding/: arithmetic.rs  mod.rs  probability.rs
crates/qres_core/src/inference/: heuristic.rs  hybrid_predictor.rs  mod.rs  onnx.rs
crates/qres_core/src/multivariate/: correlation.rs  manager.rs  mod.rs
crates/qres_core/src/packet/: fragmentation.rs
crates/qres_core/src/power/: mod.rs  twt_scheduler.rs
crates/qres_core/tests/: feedback_test.rs  invariant_regression.rs  multimodal_verification.rs  roundtrip_test.rs  test_adaptive_aggregation.rs  test_audit_system.rs  twt_integration_test.rs  v19_verification.rs
crates/qres_daemon/: Cargo.toml
crates/qres_daemon/examples/: swarm_scale.rs
crates/qres_daemon/src/: analytics.rs  api.rs  brain_aggregator.rs  config.rs  daemon.rs  dreaming.rs  living_brain.rs  main.rs  peer_keys.rs  qes.rs  security.rs  stats.rs  swarm.rs  swarm_p2p.rs
crates/qres_sim/: Cargo.toml
crates/qres_sim/evaluation/: sentinel_simulation.py
crates/qres_sim/evaluation/results/: energy_timeline.csv  regime_timeline.csv  sleep_intervals.csv
crates/qres_sim/tests/: long_term_autonomy.rs
crates/qres_wasm/: Cargo.toml
data/: README.md
data/iot/: sensor_logs.json
docs/: API_REFERENCE.md  BENCHMARKS.md  CLOUD_BENCHMARK_RESULTS.md  COGNITIVE_MESH_ROADMAP.md  COGNITIVE_MESH_SAFETY.md  CONTRIBUTING.md  COST_COMPARISON.md  IMAGES.md  IMPLEMENTATION_STATUS.md  INDEX.md  MULTIMODAL_FIXES_FINAL_REPORT.md  MULTIMODAL_VERIFICATION_WORKFLOW.md  QRES_V20_FINAL_VERIFICATION.md  README.md  RELATED_WORK.md  ROADMAPv20.md  SCOPE.md  SECURITY_ROADMAP.md  SENSITIVITY_ANALYSIS.md  SPEC.md  TECHNICAL_DEBT.md  V20_IMPLEMENTATION_SUMMARY.md  phase1_1_implementation_summary.md  phase1_2_implementation_summary.md  phase1_3_implementation_summary.md  references.bib
docs/RaaS_Data/: byz_ratio_sweep.csv  energy_timeline.csv  hardened_final.csv  integrity_hardening_table.tex  robustness_summary.tex  robustness_sweep.csv  solution_discovery.csv
docs/RaaS_Paper/: appendix.tex  macros.tex  main.tex  references.bib
docs/adaptive/: META_TUNING.md
evaluation/benchmarks/: Cargo.toml  drift_verification.py  drifting_signal.py  generate_diverse_iot.py  generate_noisy_iot.py  hive_validation.py  iot_benchmark.py  plot_brain.py  plot_evolution.py  plot_hero_chart.py  plot_singularity.py  simulate_swarm.py  smoke_test.py  swarm_scale.rs  swarm_sim.rs  tensor_benchmark.py  test_adaptive_ans.py  test_compression_suite.py  test_final_suite.py  test_p2p.py  test_sine.py  test_zstd_fallback.py  text_benchmark.py  training_data.csv
evaluation/benchmarks/datasets/: data_1mb.csv  data_1mb.xml  hamlet.txt  logs_1mb.json  source_1mb.c  text_1mb.txt.zst
evaluation/benchmarks/results/: benchmark_report.md  brain_node_1.json  brain_node_2.json  neural_test_out.txt  node1.key  node2.key
evaluation/benchmarks/src/: accuracy_sim.rs  comprehensive_runner.rs  encoding_benchmark.rs  lib.rs  multivariate_demo.rs  preventative_scaling.rs  resource_benchmark.rs
evaluation/benchmarks/src/edge_realistic/: benchmark_runner.rs  constraint_simulator.rs  device_profiles.rs  mod.rs
evaluation/benchmarks/src/edge_realistic/datasets/: ECG5000_Proxy.csv  ItalyPowerDemand_Proxy.csv  MoteStrain_Proxy.csv  SmoothSine_Proxy.csv  Wafer_Proxy.csv  fetch_datasets.py
evaluation/benchmarks/src/edge_realistic/device_profiles/: desktop.yaml  esp32.yaml  pi_zero.yaml
examples/virtual_iot_network/: Cargo.toml  README.md
examples/virtual_iot_network/src/: aggregator.rs  main.rs  sensor_node.rs
examples/virtual_iot_network/static/: index.html
tests/: test_distributed_state.py  test_persistent.py  test_ratio_targets.py  test_receiver_unit.py  test_swarm_broadcast.py  test_swarm_global.py  verify_iot_fidelity.py  verify_phase1.py  verify_phase2.py
tools/: ablation_comparison.py  animate_convergence.py  bootstrap_attack.py  figure3_static_evolution.py  fixed_point_precision.py  gen_sensitivity_plot.py  generate_class_c_figure.py  generate_paper_figures.py  generate_v19_visuals.py  golden_run_v19.py  mnist_real_world.py  onboarding_test.py  partition_recovery.py  robustness_results.txt  storm_robustness_sweep.py  sybil_collusion_sweep.py  verify_robustness.py  visualize_attack.py  visualize_robustness.py  visualize_tolerance.py
(+117 files in other folders)
