[workspace]
members = [
    "crates/qres_core",
    "crates/qres_daemon",
    "crates/qres_sim",
    "crates/qres_wasm",
    "evaluation/benchmarks",
    "examples/virtual_iot_network",
    "tools/swarm_sim"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"
log = "0.4"
zstd = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tract-onnx = "0.21.10"
qres_core = { path = "./crates/qres_core" }
