[workspace]
members = [
    "crates/qres_core",              # no_std deterministic runtime (Q16.16 fixed-point consensus, Byzantine aggregation, ZK proofs)
    "crates/qres_daemon",            # P2P edge daemon (libp2p gossipsub) + REST API for node management
    "crates/qres_sim",               # Simulation and evaluation engine for swarm dynamics and regime testing
    "crates/qres_wasm",              # WebAssembly bindings for browser-based visualization and edge deployment
    "evaluation/benchmarks",         # Performance harness for convergence, bandwidth, and Byzantine tolerance metrics
    "examples/virtual_iot_network",  # Demo application: 100-node virtual IoT deployment with noise injection
    "tools/swarm_sim"                # Bevy 3D simulator: emergent behavior visualization (legacy, pre-qres_sim)
]
resolver = "2"

[workspace.package]
rust-version = "1.77"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"
log = "0.4"
zstd = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tract-onnx = "0.21.10"
qres_core = { path = "./crates/qres_core" }
