[package]
name = "qres_daemon"
version = "19.0.0"
edition = "2021"

[dependencies]
qres_core = { workspace = true, features = ["cli", "std"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
dirs = "5.0"
lazy_static = "1.4"
zstd = "0.13"
sysinfo = "0.30"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
fixed = "1.23"

# P2P Stack
libp2p = { version = "0.53", features = ["tcp", "tls", "dns", "yamux", "websocket", "noise", "macros", "tokio", "gossipsub", "mdns", "identify", "kad"] }
axum = "0.7" # For the API
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
