[package]
name = "virtual_iot_network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
qres_core = { path = "../../crates/qres_core" }
